fix the issue in the flag height also the button space and hr gap

--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,48 @@
   box-shadow: 0 10px 15px #000;
   background: whitesmoke;
   position: relative;
+  outline: 2px solid gray;
+}
+
+#btn {
+  display: grid;
+  grid-gap: 10px;
+}
+
+hr {
+  margin: 10px 0 10px 0;
+}
+
+#btn-cancel {
+  background-color: lightseagreen;
+  color: white;
+  cursor: pointer;
+}
+
+#btn-confirm,
+#btn-delete {
+  background-color: red;
+  border: none;
+  padding: 10px 15px;
+  color: #fff;
+}
+
+#btn-add {
+  background-color: lightseagreen;
+  color: white;
+}
+
+#btn-create {
+  background-color: green;
+  color: white;
+}
+
+#btn-update,
+#btn-edit {
+  background-color: orangered;
+  border: none;
+  padding: 10px 15px;
+  color: #fff;
 }
 
 .icon {
@@ -20,7 +62,7 @@
 .icon-img {
   border-radius: 50%;
   width: 50px;
-  border: 5px solid black;
+  outline: 2px solid gray;
 }
 
 .pfp {
@@ -39,10 +81,9 @@
 
 .country {
   width: 50px;
-  height: 20px;
+  height: 40px;
   display: block;
   object-fit: cover;
-  border: 1px solid black;
 }
 
 .btn-countainer {
